OpenLDAP 2.2 Change Log

OpenLDAP 2.2.20 Engineering
	Fixed slapd sanity check on protocol in authz-regexp URI (ITS#3411)
	Fixed back-sql segfault when logging and delete_rule is NULL (ITS#3407)

OpenLDAP 2.2.19 Release
	Fixed slapd check for mandatory filter in authz-regexp URI (ITS#3396)
	Fixed slapd bad descriptor check (ITS#3400)
	Fixed slapd ACI when the subject contains '#' (ITS#3303)
	Fixed slapd syncrepl consumer memory corruption (ITS#3403)
	Fixed back-ldap malformed URI check for multiple URIs (ITS#3399)
	Fixed back-ldap/back-meta static definition of be_open() (ITS#3387)
	Fixed back-bdb cache bugs (ITS#3356, #3358), ctxcsn memory leak
	Build Environment
		Fixed lber.h dup portability bug
		Updated BDB mismatch messages (ITS#3375)
		Added BDB 4.3 detection

OpenLDAP 2.2.18 Release
	Fixed libldap schema keyword sensitivity (ITS#3334)
	Fixed libldap DN filter sensitivity (ITS#3334)
	Fixed libldap intermediate response tags (ITS#3381)
	Fixed slapd matching rule name sensitivity (ITS#3334)
	Fixed slapd multiple value delete (ITS#3346)
	Fixed slapd referral memory leak
	Fixed slapd mods2entry memory leak
	Fixed slapd psearch consistency bug
	Updated back-sql
	Documentation
		Updated release documents

OpenLDAP 2.2.17 Release
	Fixed slapd syncrepl memory leak bugs
	Documentation
		Updated ldif(5)

OpenLDAP 2.2.16 Release
	Fixed libldap getaddrinfo hints portability bug (ITS#3279)
	Fixed libldap find_connection bug (ITS#3280)
	Fixed libldap SASL host connected to bug (ITS#3298)
	Fixed libldap SASL proper sockbuf bug
	Fixed libldap results lc bug (ITS#3250)
	Fixed ldapsearch paged results size 0 bug 
	Fixed slapd syncrepl SSF propagation bug (ITS#3131)
	Fixed slapd ACL sets bug (ITS#3140)
	Fixed slapd bind referral bug (ITS#3264)
	Fixed slapd syncrepl misc bugs (ITS#3259,3297)
	Fixed slapd overlays CSN CTX bug (ITS#3288)
	Fixed slapd sun_path portability bug
	Fixed slapd permissive modify bug
	Fixed slapd hang bug (ITS#3309)